--- a/templates/second_page.html
+++ b/templates/second_page.html
@@ -9,6 +9,11 @@
 <body>
     <h1> Hello WORLD</h1>
     <p> This is the second page </p>
+    <ul>
+        {% for lead in leads %}
+            <li>{{ lead }}</li>
+        {% endfor %}
+    </ul>
     
 </body>
 </html>
