--- a/leads/templates/leads/lead_detail.html
+++ b/leads/templates/leads/lead_detail.html
@@ -22,12 +22,10 @@
 </head>
 
 <body>
-    <h1>This is all of our leads</h1>
-    {% for lead in leads %}
-        <div class="lead">
-            <a href = "/leads/{{ lead.pk }}/">{{lead.first_name}} {{lead.last_name}}. Age: {{lead.age}}</a>
-        </div>
-    {% endfor %}
+    <a href = "/leads/">Back to all leads</a>
+    <hr>
+    <h1>This is the details of {{lead.first_name}}</h1>
+    <p>This persons age: {{lead.age}}</p>
 
 </body>
 </html>
