--- a/leads/templates/leads/lead_detail.html
+++ b/leads/templates/leads/lead_detail.html
@@ -22,10 +22,14 @@
 </head>
 
 <body>
-    <a href = "/leads/">Back to all leads</a>
+    <a href = "{% url 'leads:lead-list' %}">Back to all leads</a>
     <hr>
     <h1>This is the details of {{lead.first_name}}</h1>
     <p>This persons age: {{lead.age}}</p>
+    <p>The Agent responsible for this lead is : {{lead.agent}}</p>
+    <hr/>
+    <a href = "{% url 'leads:lead-update' lead.pk %}">Update this lead</a>
+    <a href = "{% url 'leads:lead-delete' lead.pk %}">Delete this lead</a>
 
 </body>
 </html>
