--- a/leads/templates/leads/lead_list.html
+++ b/leads/templates/leads/lead_list.html
@@ -22,10 +22,12 @@
 </head>
 
 <body>
+    <a href="{% url 'leads:lead-create' %}">Create a New Lead</a>
+    <hr/>
     <h1>This is all of our leads</h1>
     {% for lead in leads %}
         <div class="lead">
-            <a href = "/leads/{{ lead.pk }}/">{{lead.first_name}} {{lead.last_name}}. Age: {{lead.age}}</a>
+            <a href = "{%url 'leads:lead-detail' lead.pk %} ">{{lead.first_name}} {{lead.last_name}}. Age: {{lead.age}}</a>
         </div>
     {% endfor %}
 
