--- a/leads/templates/leads/lead_update.html
+++ b/leads/templates/leads/lead_update.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
 <body>
-    <a href = "{% url 'leads:lead-detail' lead.pk %}">Go back to all leads</a>
+    <a href = "{% url 'leads:lead-detail' lead.pk %}">Go back to {{lead.first_name}} {{lead.last_name}}</a>
     <hr/>
-    <h1>Create a New Lead</h1>
+    <h1>Update a Lead : {{lead.first_name}} {{lead.last_name}}</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
