--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,3 @@
-
 <header class="text-gray-700 body-font">
   <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
     <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
@@ -8,9 +7,11 @@
       <span class="ml-3 text-xl">DJ CRM</span>
     </a>
     <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-      <a href="{% url 'leads:lead-list' %}" class="mr-5 hover:text-gray-900">Leads</a>
       {% if not request.user.is_authenticated %}
         <a href="{% url 'signup' %}" class="mr-5 hover:text-gray-900">Signup</a>
+      {% else %}
+        <a href="{% url 'agents:agent-list' %}" class="mr-5 hover:text-gray-900">Agents</a>
+        <a href="{% url 'leads:lead-list' %}" class="mr-5 hover:text-gray-900">Leads</a>
       {% endif %}
     </nav>
     {% if request.user.is_authenticated %}
