--- a/leads/templates/registration/login.html
+++ b/leads/templates/registration/login.html
@@ -7,6 +7,8 @@
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Login</button>
+    <hr/>
+    <a href="#">Forogt password</a>
 
 </form>
 
